# codegraph-vscode

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: AI_TOOL_EXAMPLES.md  autonomous_ai_integration_plan.md  language_model_tools_implementation.md
scripts/: build.sh
server/: Cargo.toml
server/src/: backend.rs  cache.rs  custom_requests.rs  error.rs  index.rs  main.rs  parser_registry.rs  watcher.rs
server/src/handlers/: ai_context.rs  custom.rs  metrics.rs  mod.rs
src/: extension.ts  types.ts
src/ai/: chatParticipant.ts  contextProvider.ts  toolManager.test.ts  toolManager.ts
src/commands/: index.ts
src/views/: graphPanel.ts
